# ikekohub

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
ikekohub/: asgi.py  public_urls.py  settings.py  tenant_urls.py  urls.py  wsgi.py
public_app/: admin.py  models.py  urls.py  views.py
public_app/migrations/: 0001_initial.py
school/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_adminprofile_department_teacherprofile_employee_id_and_more.py
